Index and close btn now optional. Simplified HTML markup.

--- a/index.html
+++ b/index.html
@@ -59,11 +59,7 @@
 
    
 <div class="bottom-panel" id="bottom-panel">
-	<div class="popup-wrapper" id="popup-wrapper">
-		<div id="popup-index"></div>
-		<div id="popup-content"></div>
-		<div class="popup-cl" id="popup-close"><a href="javascript:void(0);" class="close" style="text-decoration: none;">[x]</a></div>
-	</div> 
+	<div class="popup-wrapper" id="popup-wrapper"></div> 
 </div> 
 <script src="./footnotes.js"></script>
 </body>
